<resources>
    <string name="app_name">ScreensJuggler</string>
    <string name="title_about">About</string>
    <string name="title_wizard_two">Wizard two</string>
    <string name="menu_main">мейн</string>
    <string name="menu_about">эбаут</string>
    <string name="title_main">Hello, Jugler!</string>
    <string name="stub">Stub</string>
    <string name="title_toolbar_only">Toolbar only</string>
    <string name="menu_state_a">state a</string>
    <string name="menu_state_b">state b</string>
    <string name="title_state_a">State A</string>
    <string name="title_state_b">State B</string>
    <string name="title_state_c">State C</string>
    <string name="menu_state_c">state C</string>
    <string name="title_list">List!</string>
    <string name="title_profile">Профиль</string>
</resources>
