<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_main"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_main"/>

        <item
            android:id="@+id/menu_profile"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="профиль"/>

        <item
            android:id="@+id/menu_state_a"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_state_a"/>

        <item
            android:id="@+id/menu_state_b"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_state_b"/>

        <item
            android:id="@+id/menu_state_c"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_state_c"/>

        <item
            android:id="@+id/menu_about"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_about"/>

        <item
            android:id="@+id/menu_only_content"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_send"
            android:title="content only"/>

        <item
            android:id="@+id/menu_new_activity"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_send"
            android:title="new activity"/>

    </group>

</menu>